src/objects/Other_Medications_OTC__c.object
<CustomObject>
    <fields>
        <fullName>Date_Used__c</fullName>
        <label>Date Used</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dosage__c</fullName>
        <label>Dosage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indication__c</fullName>
        <label>Indication</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTC_Related_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OTC Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Other Medications/OTCs</relationshipLabel>
        <relationshipName>Other_Medications_OTCs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Synced_With_PQM__c</fullName>
        <label>Synced With PQM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Other Medications/OTC</label>
    <nameField>
        <label>Other Medications/OTC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Other Medications/OTCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>